--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
       "react-app/jest"
     ]
   },
+  "jest": {
+    "transformIgnorePatterns": ["node_modules/(?!axios)/"]
+  },
   "browserslist": {
     "production": [
       ">0.2%",
